force-app/main/default/objects/Time_Record_Period__c/Time_Record_Period__c.object-meta.xml
<CustomObject>
    <description>Time record periods</description>
    <label>Time Record Period</label>
    <nameField>
        <displayFormat>TRP-{00000000}</displayFormat>
        <label>Time Record Period Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Record Periods</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>