force-app/main/default/objects/Time_Record_Period__c/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <formula>TODAY() -  Start_Date__c &gt; 14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>