force-app/main/default/objects/Time_Record_Period__c/fields/Period_Category__c.field-meta.xml
<CustomField>
    <fullName>Period_Category__c</fullName>
    <description>Used to categorize the period to allow for multiple functionalities</description>
    <label>Period Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beta</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>Litigation</fullName>
                <default>true</default>
                <label>Litigation</label>
            </value>
            <value>
                <fullName>PV</fullName>
            </value>
            <value>
                <fullName>TFR</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>