force-app/main/default/objects/Time_Record_Period__c/fields/Public_Group__c.field-meta.xml
<CustomField>
    <fullName>Public_Group__c</fullName>
    <description>The time tracking public group name</description>
    <formula>CASE(TEXT(Period_Category__c), &quot;PV&quot;, &quot;Time_Tracking_PV&quot;, &quot;FR&quot;, &quot;Time_Tracking_FR&quot;, &quot;Beta&quot;, &quot;Time_Tracking_Beta&quot;, &quot;Litigation&quot;, &quot;Time_Tracking_Litigation&quot;, &quot;TFR&quot;, &quot;Time_Tracking_TFR&quot;, &quot;SC&quot;, &quot;Time_Tracking_SC&quot;, null)</formula>
    <label>Public Group</label>
    <type>Text</type>
</CustomField>